--- a/src/pug/pages/technology.pug
+++ b/src/pug/pages/technology.pug
@@ -8,7 +8,7 @@ block content
 			include ../sections/_technology-content
 
 		include ../sections/_footer
-		
+		include ../blocks/_modal-technology
 
 block variables
 	-var title = "Материалы и технологии";
