--- a/src/pug/sections/_technology-content.pug
+++ b/src/pug/sections/_technology-content.pug
@@ -15,19 +15,19 @@ section.technology
 			//====left column ===
 			.technology-wrapper
 				.link-group
-					a(href="#!").accent-link.txt-20 Comfort System Life
+					a(href="#!" data-target="modal-technology").accent-link.txt-20 Comfort System Life
 					p Представляем новинку от NorthBloom! Комплекс усовершенствований для демисезонной одежды.
 				.link-group
-					a(href="#!").accent-link.txt-20 Вискоза
+					a(href="#!" data-target="modal-technology").accent-link.txt-20 Вискоза
 					p Вискоза является наиболее оптимальным вариантом для изготовления подкладки
 				.link-group
-					a(href="#!").accent-link .txt-20Утеплитель Файбертек
+					a(href="#!").accent-link.txt-20 Утеплитель Файбертек
 					p Утеплитель Файбертек – экологически чистый материал, произведенный из тончайших полых полиэфирных волокон.екс усовершенствований для демисезонной одежды.
 				.link-group
-					a(href="#!").accent-link.txt-20 Comfort System Life
+					a(href="#!" data-target="modal-technology").accent-link.txt-20 Comfort System Life
 					p Представляем новинку от NorthBloom! Комплекс усовершенствований для демисезонной одежды.
 				.link-group
-					a(href="#!").accent-link.txt-20 Comfort System Life
+					a(href="#!" data-target="modal-technology").accent-link.txt-20 Comfort System Life
 					p Представляем новинку от NorthBloom! Комплекс усовершенствований для демисезонной одежды.
 			
 			//=====video acordion====
