--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -227,7 +227,7 @@ textarea, select {
   display: block;
   width: 100%;
   text-align: left;
-
+  color: var(--text-black);
   background-color: var(--imput-imput-gray);
   border: 1px solid var(--style);
   height: 64px;
