--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -3,7 +3,7 @@ extends ../layouts/layout.pug
 block content
 	.page-wrapper
 
-		//- include ../blocks/_preloader
+		include ../blocks/_preloader
 		
 		include ../sections/_header
 		main.main
@@ -11,7 +11,7 @@ block content
 
 		
 		include ../sections/_footer
-		//- include ../blocks/_cooki-popup
+		include ../blocks/_cooki-popup
 
 
 block variables
