--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -51,7 +51,7 @@ body {
 	margin: 0;
 	padding: 0;
 	color: var(--text-black);
-	font-family: $reg;
+	font-family: $reg, sans-serif;
 	font-size: 16px;
 	line-height: 1.5;
 	font-weight: 400;
