--- a/src/pug/blocks/_modal-success-send.pug
+++ b/src/pug/blocks/_modal-success-send.pug
@@ -1,7 +1,7 @@
 //=========MODAL SUCCESS SEND FORM =======
 //=====окно отображается за счет класса active===
 .modal-wrapper.active.modal-wrapper--simple
-	.modal-body.bg-grey.form-wrapper
+	.modal-body.bg-grey
 		//===btn close popup ===
 		button(type="button" data-role="modal-close").btn-close
 			svg.svg-close
