--- a/src/pug/blocks/_modal-success-support.pug
+++ b/src/pug/blocks/_modal-success-support.pug
@@ -1,6 +1,6 @@
 //=====окно отображается за счет класса active===
-.modal-wrapper.active.modal-wrapper--success
-	.modal-body.bg-grey.form-wrapper
+.modal-wrapper.active.modal-wrapper--simple
+	.modal-body.bg-grey
 		//===btn close popup ===
 		button(type="button" data-role="modal-close").btn-close
 			svg.svg-close
