--- a/src/pug/sections/_single-product.pug
+++ b/src/pug/sections/_single-product.pug
@@ -87,7 +87,7 @@ section.single-product.pt-md-0
 				.product-title.mb-32
 					.title-24 Пуховик ЛАРС
 					span.product-price 45 000 ₽
-				
+				.product-colors-title цвет: #[span красный]
 				.product-colors.mb-16 
 					label.fake-input-label
 						input(type="radio" name="color-item" checked)
@@ -124,7 +124,7 @@ section.single-product.pt-md-0
 					button.link-text.size-table-link(data-target="size-table") Таблица размеров
 				//===== BUTTON =====
 				.mb-60
-					a(href="#!").btn.w-100 Где купить?
+					a(href="stores.html").btn.w-100 Где купить?
 				//===== text======
 				.product-description.mb-32
 					.txt-20 Описание
