--- a/src/pug/sections/_stores-content.pug
+++ b/src/pug/sections/_stores-content.pug
@@ -11,7 +11,7 @@ section.stores
 						use(href='./img/sprite.svg#svg-chevron-left')
 					span Вернуться
 		
-		.section-title.section-title--center
+		.section-title.section-title--center.mb-32
 			h1.h1-serif Где купить одежду NorthBloom
 		.filters-block.flx-center
 			+select2("Название города", 'city_name')(class="filter-select")
