--- a/src/scss/sections/_manual-content.scss
+++ b/src/scss/sections/_manual-content.scss
@@ -23,6 +23,7 @@
 		background-size: cover;
 		@media (max-width: 1279px) {
 		aspect-ratio: 343 / 487;
+		  position: relative;
 		}
 	}
 	@media (max-width: 767px) {
