--- a/src/pug/sections/_contacts-content.pug
+++ b/src/pug/sections/_contacts-content.pug
@@ -5,7 +5,12 @@ section.contacts
 			//===ссылки отображаются на десктоп версии и скрываются на < 1024px
 			a(href="index.html") Главная
 			a(href="#!") Контакты
-			
+			//===== этот пункт хлебных крошек отображается на экранах до 1024px
+			p
+				a(href="index.html").txt-24.chevron-link
+					svg.svg-chevron-left
+						use(href='./img/sprite.svg#svg-chevron-left')
+					span Вернуться
 		
 		//====заголовок===
 		.section-title
