--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -253,7 +253,7 @@ textarea, select {
   width: 24px;
   height: 24px;
   display: block;
-  z-index: 2;
+  // z-index: 2;
   transform: translateY(-50%);
   background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M18 9L12 15L6 9' stroke='%23222222' stroke-linecap='round' /%3e%3c/svg%3e");
   transition: .3s; 
