--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -3,7 +3,9 @@
 	top:0;
 	left: 0;
 	right: 0;
-	min-height: 100vh;
+	// min-height: 100vh;
+	height: 100%;
+	bottom: 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -34,10 +36,11 @@
 	@media (max-width: 767px) {
 	   top:56px;
 	   min-height: calc(100dvh - 56px);
+	   align-items: flex-start;
 	
 	}
 }
-.modal-wrapper--success {
+.modal-wrapper--simple {
 
 	.modal-body {
 		height: 476px;
@@ -60,7 +63,7 @@
 	}
 }
 .modal-wrapper--scroll {
-	padding-block: 3rem;
+	padding-block: 40px;
 	align-items: flex-start;
 	height: 100%;
 	overflow-y: auto;
@@ -75,4 +78,9 @@
 	column-gap:16px;
 	&>*+*{margin: 0;}
 	margin-bottom: 16px;
+	@media (max-width: 767px) {
+	  flex-direction: column;
+	  align-items: flex-start;
+	  row-gap:16px;
+	}
 }
