--- a/src/scss/blocks/_preloader.scss
+++ b/src/scss/blocks/_preloader.scss
@@ -10,7 +10,7 @@
 	animation-fill-mode: forwards;
 	animation-timing-function: ease-in-out;
 	padding-bottom: 24px;
-	
+	&.preloader-hide{display: none;}
 	&-bottom{
 		position: absolute;
 		bottom: 24px;
