--- a/src/scss/blocks/_product-card.scss
+++ b/src/scss/blocks/_product-card.scss
@@ -4,6 +4,14 @@
 	column-gap: 16px;
 	padding-bottom: 5px;
 }
+.product-colors-title{
+	text-transform: uppercase;
+	margin-bottom: 8px;
+	color: var(--text-grey);
+	span{
+		color: var(--fill-icon);
+	}
+}
 .product-title{
 	font-weight: 500;
 	text-transform: uppercase;
