preload-anim-and-slide-title-amim

--- a/src/pug/sections/_main-hero.pug
+++ b/src/pug/sections/_main-hero.pug
@@ -13,8 +13,8 @@ section.main-hero
 					
 					//===== slide text ====
 					.hero-slide__text
-						.h1-serif(data-swiper-parallax-y="200") Коллекция NorthBloom Лето 2024
-						.center-group.mt-24(data-swiper-parallax-y="200")
+						.h1-serif Коллекция NorthBloom Лето 2024
+						.center-group.mt-24
 							a(href="catalogy.html").txt-24.chevron-link 
 								span Для мужчин
 								svg.svg-chevron-right
@@ -35,8 +35,8 @@ section.main-hero
 					
 					//===== slide text ====
 					.hero-slide__text
-						.h1-serif(data-swiper-parallax-y="200") Коллекция NorthBloom Лето 2024
-						.center-group.mt-24(data-swiper-parallax-y="200")
+						.h1-serif Коллекция NorthBloom Лето 2024
+						.center-group.mt-24
 							a(href="catalogy.html").txt-24.chevron-link 
 								span Для мужчин
 								svg.svg-chevron-right
@@ -56,8 +56,8 @@ section.main-hero
 							img.lazy(src="./img/main-slider/slide.webp", width="1920" height="1080" alt="img")
 					//===== slide text ====
 					.hero-slide__text
-						.h1-serif(data-swiper-parallax-y="200") Коллекция NorthBloom Лето 2024
-						.center-group.mt-24(data-swiper-parallax-y="200")
+						.h1-serif Коллекция NorthBloom Лето 2024
+						.center-group.mt-24
 							a(href="catalogy.html").txt-24.chevron-link 
 								span Для мужчин
 								svg.svg-chevron-right
@@ -78,8 +78,8 @@ section.main-hero
 					
 					//===== slide text ====
 					.hero-slide__text
-						.h1-serif(data-swiper-parallax-y="200") Коллекция NorthBloom Лето 2024
-						.center-group.mt-24(data-swiper-parallax-y="200")
+						.h1-serif Коллекция NorthBloom Лето 2024
+						.center-group.mt-24
 							a(href="catalogy.html").txt-24.chevron-link 
 								span Для мужчин
 								svg.svg-chevron-right
