--- a/src/scss/blocks/_preloader.scss
+++ b/src/scss/blocks/_preloader.scss
@@ -32,9 +32,10 @@
 			height: 56px;
 			color: white;
 			opacity: 1;
-			animation-name: rotate;
-			animation-duration: 5s;
+			animation-name: rotateY;
+			animation-duration: 3s;
 			animation-iteration-count: infinite;
+			animation-timing-function:linear;
 		}
 		.svg-logo-text{
 			width: 345px;
@@ -110,7 +111,11 @@
 		width: 100%;
 	}
 }
-
+@keyframes rotateY {
+	to {
+		transform: rotateY(180deg);
+	}
+}
 @keyframes scale {
 	0% {
 		transform: scale(0);
