remove-lazy-main-slider

--- a/src/pug/pages/preloader.pug
+++ b/src/pug/pages/preloader.pug
@@ -5,6 +5,8 @@ block content
 	.start-page
 		h1 North Bloom
 		.start-page__cards
+			a(href="preloader.html")
+				span Заставка
 			a(href="main.html")
 				span Главная
 			a(href="authorization.html")
