--- a/src/pug/sections/_main-hero.pug
+++ b/src/pug/sections/_main-hero.pug
@@ -6,10 +6,10 @@ section.main-hero
 				.hero-slide
 					.hero-slide__img
 						picture
-							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
-							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)")
-							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
-							img.lazy(src="./img/main-slider/slide.webp", width="1920" height="1080" alt="img")
+							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)" width="767")
+							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)" width="767")
+							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)" width="1920" height="1080")
+							img(src="./img/main-slider/slide.webp", width="1920" height="1080" alt="img")
 					
 					//===== slide text ====
 					.hero-slide__text
@@ -28,10 +28,10 @@ section.main-hero
 				.hero-slide
 					.hero-slide__img
 						picture
-							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
-							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)")
-							source(srcset="./img/main-slider/slide2@2x.webp", media="(min-resolution: 192dpi)")
-							img.lazy(src="./img/main-slider/slide2.webp", width="1920" height="1080" alt="img")
+							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)" width="767")
+							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)" width="767")
+							source(srcset="./img/main-slider/slide2@2x.webp", media="(min-resolution: 192dpi)" width="1920" height="1080")
+							img(src="./img/main-slider/slide2.webp", width="1920" height="1080" alt="img")
 					
 					//===== slide text ====
 					.hero-slide__text
@@ -50,10 +50,10 @@ section.main-hero
 				.hero-slide
 					.hero-slide__img
 						picture
-							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
-							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)")
-							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
-							img.lazy(src="./img/main-slider/slide.webp", width="1920" height="1080" alt="img")
+							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)" width="767")
+							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)" width="767")
+							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)" width="1920" height="1080")
+							img(src="./img/main-slider/slide.webp", width="1920" height="1080" alt="img")
 					//===== slide text ====
 					.hero-slide__text
 						.h1-serif Коллекция NorthBloom Лето 2024
@@ -71,10 +71,10 @@ section.main-hero
 				.hero-slide
 					.hero-slide__img
 						picture
-							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
-							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)")
-							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
-							img.lazy(src="./img/main-slider/slide2.webp", width="1920" height="1080" alt="img")
+							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)"  width="767")
+							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)" width="767")
+							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)"  width="1920" height="1080")
+							img(src="./img/main-slider/slide2.webp", width="1920" height="1080" alt="img")
 					
 					//===== slide text ====
 					.hero-slide__text
