--- a/src/scss/blocks/_preloader.scss
+++ b/src/scss/blocks/_preloader.scss
@@ -19,11 +19,7 @@
 	}
 	&-logo{
 		width: 419px;
-		transform: scale(0);
-		animation-name: scale;
-		animation-duration: 1.5s;
-		animation-fill-mode:forwards;
-		animation-delay:.3s;
+		
 		.flx-center{
 			column-gap:16px;
 		}
@@ -34,6 +30,7 @@
 			opacity: 1;
 			animation-name: rotateY;
 			animation-duration: 2s;
+			animation-delay:.3s;
 			animation-iteration-count: infinite;
 			animation-timing-function:linear;
 		}
@@ -118,16 +115,16 @@
 		transform: rotateY(180deg);
 	}
 }
-@keyframes scale {
-	0% {
-		transform: scale(0);
+// @keyframes scale {
+// 	0% {
+// 		transform: scale(0);
 		
-	}
-	50% {
-		transform: scale(1.1);
+// 	}
+// 	50% {
+// 		transform: scale(1.1);
 
-	}
-	100%{
-		transform: scale(1);
-	}
-}
+// 	}
+// 	100%{
+// 		transform: scale(1);
+// 	}
+// }
